# badge-canvas-generator

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yaml  release.yml
src/: api.rs  main.rs  models.rs
