[package]
name = "imvu-canvas-downloader"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
image = "0.24.7"
clap = { version = "4.4.3", features = ["derive"]}
dxr= "0.6.0"
dxr_client = {version = "0.6.0", features = ["reqwest"]}