[package]
name = "imvu-canvas-downloader"
version = "0.1.0"
edition = "2021"
authors = ["Toyz"]
description = "A tool to download IMVU canvas images and generate a single image."

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.20", features = ["json"] }
tokio = { version = "1.32.0", features = ["full"] }
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
image = "0.24.7"
clap = { version = "4.4.3", features = ["derive"]}
dxr= "0.6.0"
dxr_client = {version = "0.6.0", features = ["reqwest"]}
log = "0.4.20"
env_logger = "0.10.0"
hex = "0.4.3"
url = "2.4.1"
anyhow = "1.0.75"
num_cpus = "1.16.0"